# soil-spectroscopy

./: .gitignore  PRD.md  README.md  pyproject.toml
src/soilspec/: __init__.py  _seed.py  capability.py  confidence.py  fusion.py  groundtruth.py  inference.py  orchestrator.py  publisher.py  recommendation.py  registry.py  train.py  training.py  types.py
src/soilspec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/soilspec/datasets/: __init__.py  build.py  build_text.py  initial_aois.py  ismn_to_csv.py  lucas_to_csv.py  regenerate_aois.py  text_corpus.py  train_initial.py
src/soilspec/encoders/: __init__.py  spatial.py  spectral.py
src/soilspec/ingestion/: __init__.py  adapters.py  ingestion.py  mcp.py  metadata.py  planetary.py
src/soilspec/preprocessing/: __init__.py  pipeline.py  spatial.py  vector.py
src/soilspec/storage/: __init__.py  tiers.py
src/soilspec/temporal/: __init__.py  analysis.py  dataset.py  features.py
tests/: conftest.py  test_capability.py  test_confidence.py  test_determinism.py  test_encoders.py  test_fusion.py  test_golden.py  test_groundtruth.py  test_groundtruth_ismn.py  test_groundtruth_lucas.py  test_groundtruth_real.py  test_groundtruth_soilgrids.py  test_inference.py  test_ingestion.py  test_integration.py  test_orchestrator.py  test_planetary_adapters.py  test_preprocessing.py  test_publisher.py  test_recommendation.py  test_storage.py  test_temporal.py  test_text_corpus.py  test_training.py  test_training_ensemble.py  test_training_pipeline.py
tests/fixtures/golden/: capability.json  recommendation.json
