[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soilspec"
version = "0.1.0"
description = "Multimodal remote sensing pipeline for soil functional properties and land capability classification"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=7", "torch>=2"]
torch = ["torch>=2"]
planetary = [
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "rasterio>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "bench: performance benchmarks (not run by default)",
    "golden: golden-file tests",
]
addopts = "-ra -m 'not bench'"
